k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: incognitoj/incognito-frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf   # mounts our ConfigMap as the default Nginx config
      volumes:
      - name: nginx-config-volume
        configMap:
          name: frontend-nginx-config   # reference to the ConfigMap we created
